feat: 書き込み権限追加

--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -10,6 +10,9 @@ jobs:
   protect-branch:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write # 必要な権限を付与
+
     steps:
       - name: Set up GitHub CLI
         uses: actions/checkout@v3
