--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -11,15 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write # 必要な権限を付与
+      contents: write # 必要な権限（リポジトリの内容への書き込み）
 
     steps:
       - name: Set up GitHub CLI
-        uses: actions/checkout@v3
+        uses: cli/gh-actions@v2 # GitHub CLIのセットアップ
+
+      - name: Set up GitHub repository
+        uses: actions/checkout@v3 # リポジトリのコードをチェックアウト
 
       - name: Protect branch from deletion
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GITHUB_TOKENを使用
         run: |
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           echo "Protecting branch: $BRANCH_NAME from deletion"
