--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -10,10 +10,10 @@ jobs:
   protect-branch:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Set up GitHub CLI
-        uses: actions/checkout@v3
+    permissions:
+      contents: write
 
+    steps:
       - name: Protect branch from deletion
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
