--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -21,8 +21,8 @@ jobs:
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
           echo "Protecting branch: $BRANCH_NAME from deletion"
 
-          gh api \
-            -X PUT \
-            -H "Accept: application/vnd.github+json" \
-            /repos/${{ github.repository }}/branches/${BRANCH_NAME}/protection \
-            -f allow_deletions=false
+          # gh api \
+          #   -X PUT \
+          #   -H "Accept: application/vnd.github+json" \
+          #   /repos/${{ github.repository }}/branches/${BRANCH_NAME}/protection \
+          #   -f allow_deletions=false
