テスト ユーザー取得

--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -22,6 +22,8 @@ jobs:
           echo "Protecting branch: $BRANCH_NAME from deletion"
           echo "token: ${{secrets.GITHUB_TOKEN}}"
 
+          gh api /user
+
           # gh api \
           #   -X PUT \
           #   -H "Accept: application/vnd.github+json" \
