--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -11,7 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write # リポジトリ内容の書き込み権限
+      contents: write # リポジトリの内容への書き込み権限
+      issues: write # イシュー関連の情報の書き込み権限
+      pull-requests: write # プルリクエストに関する情報の書き込み権限
+      actions: write # ワークフロー実行に関する書き込み権限
+      checks: write # チェックの書き込み権限
+      deployments: write # デプロイメント情報への書き込み権限
 
     steps:
       - name: Protect branch from deletion
