--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -25,24 +25,24 @@ jobs:
             --method PUT \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/branches/${BRANCH_NAME}/protection \
+            /repos/go-sotaro-shibata/test-github-actions/branches/${BRANCH_NAME}/protection \
             -F "required_status_checks[strict]=true" \
-            -f "required_status_checks[contexts[]]=continuous-integration/travis-ci" \
+            -F "required_status_checks[contexts]=continuous-integration/travis-ci" \
             -F "enforce_admins=true" \
-            -f "dismissal_restrictions[users[]]=octocat" \
-            -f "dismissal_restrictions[teams[]]=justice-league" \
+            -F "dismissal_restrictions[users]=octocat" \
+            -F "dismissal_restrictions[teams]=justice-league" \
             -F "required_pull_request_reviews[dismiss_stale_reviews]=true" \
             -F "required_pull_request_reviews[require_code_owner_reviews]=true" \
             -F "required_pull_request_reviews[required_approving_review_count]=2" \
             -F "required_pull_request_reviews[require_last_push_approval]=true" \
-            -f "bypass_pull_request_allowances[users[]]=octocat" \
-            -f "bypass_pull_request_allowances[teams[]]=justice-league" \
-            -f "restrictions[users[]]=octocat" \
-            -f "restrictions[teams[]]=justice-league" \
-            -f "restrictions[apps[]]=super-ci" \
+            -F "bypass_pull_request_allowances[users]=octocat" \
+            -F "bypass_pull_request_allowances[teams]=justice-league" \
+            -F "restrictions[users]=octocat" \
+            -F "restrictions[teams]=justice-league" \
+            -F "restrictions[apps]=super-ci" \
             -F "required_linear_history=true" \
             -F "allow_force_pushes=true" \
-            -F "allow_deletions=false" \  # Deletion not allowed
+            -F "allow_deletions=false" \
             -F "block_creations=true" \
             -F "required_conversation_resolution=true" \
             -F "lock_branch=true" \
