--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -31,21 +31,7 @@ jobs:
             -f "required_status_checks.strict=false" \
             -f "required_status_checks.contexts=[]" \
             -f "enforce_admins=true" \
-            -f "required_pull_request_reviews[required_approving_review_count]=1" \
-            -f "allow_deletions=false" \
-            # -f "required_pull_request_reviews[dismiss_stale_reviews]=true" \
-            # -f "required_pull_request_reviews[require_code_owner_reviews]=true" \
-            # -f "required_pull_request_reviews[require_last_push_approval]=true" \
-            # -f "restrictions[users[]]=octocat" \
-            # -f "restrictions[teams[]]=justice-league" \
-            # -f "restrictions[apps[]]=super-ci" \
-            # -f "dismissal_restrictions[users[]]=octocat" \
-            # -f "dismissal_restrictions[teams[]]=justice-league" \
-            # -f "bypass_pull_request_allowances[users[]]=octocat" \
-            # -f "bypass_pull_request_allowances[teams[]]=justice-league" \
-            # -f "required_linear_history=true" \
-            # -f "allow_force_pushes=true" \
-            # -f "block_creations=true" \
-            # -f "required_conversation_resolution=true" \
-            # -f "lock_branch=true" \
-            # -f "allow_fork_syncing=true"
+            -f "required_pull_request_reviews.required_approving_review_count=1" \
+            -f "restrictions.users=[]" \
+            -f "restrictions.teams=[]" \
+            -f "allow_deletions=false"
