--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -31,7 +31,9 @@ jobs:
             -f "required_status_checks.strict=false" \
             -f "required_status_checks.contexts=[]" \
             -f "enforce_admins=true" \
-            -f "required_pull_request_reviews.required_approving_review_count=1" \
+            -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
+            -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
+            -F "required_pull_request_reviews[required_approving_review_count]=1" \
             -f "restrictions.users=[]" \
             -f "restrictions.teams=[]" \
             -f "allow_deletions=false"
