--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -28,12 +28,13 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${OWNER}/${REPO}/branches/${BRANCH_NAME}/protection \
-            -f "required_status_checks.strict=false" \
-            -f "required_status_checks.contexts=[]" \
+            -F "required_status_checks[strict]=true" \
+            -f "required_status_checks[contexts[]]=continuous-integration/travis-ci" \
             -f "enforce_admins=true" \
             -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
             -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
             -F "required_pull_request_reviews[required_approving_review_count]=1" \
-            -f "restrictions.users=[]" \
-            -f "restrictions.teams=[]" \
+            -f "restrictions[users[]]=[]" \
+            -f "restrictions[teams[]]=[]" \
+            -f "restrictions[apps[]]=false" \
             -f "allow_deletions=false"
