--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -28,8 +28,8 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${OWNER}/${REPO}/branches/${BRANCH_NAME}/protection \
-            -F "required_status_checks[strict]=true" \
-            -f "required_status_checks[contexts[]]=continuous-integration/travis-ci" \
+            -F "required_status_checks.strict=true" \
+            -f "required_status_checks.contexts=continuous-integration/travis-ci" \
             -f "enforce_admins=true" \
             -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
             -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
