--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -31,7 +31,7 @@ jobs:
             -F "required_status_checks.strict=true" \
             -f "required_status_checks.contexts=continuous-integration/travis-ci" \
             -F "enforce_admins=true" \
-            # -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
+            -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
             # -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
             # -F "required_pull_request_reviews[required_approving_review_count]=1" \
             # -f "restrictions[users[]]=[]" \
