--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -34,7 +34,7 @@ jobs:
             -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
             -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
             -F "required_pull_request_reviews[required_approving_review_count]=1" \
-            # -f "restrictions[users[]]=[]" \
+            -f "restrictions[users[]]=[]" \
             # -f "restrictions[teams[]]=[]" \
             # -f "restrictions[apps[]]=false" \
             # -f "allow_deletions=false"
