--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -35,6 +35,6 @@ jobs:
             -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
             -F "required_pull_request_reviews[required_approving_review_count]=1" \
             -f "restrictions.users=[]" \
-            # -f "restrictions[teams[]]=[]" \
-            # -f "restrictions[apps[]]=false" \
+            -f "restrictions.teams=[]" \
+            -f "restrictions.apps=false" \
             # -f "allow_deletions=false"
