--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -37,4 +37,4 @@ jobs:
             -f "restrictions.users=[]" \
             -f "restrictions.teams=[]" \
             -f "restrictions.apps=false" \
-            # -f "allow_deletions=false"
+            -f "allow_deletions=false"
