trontコメントアウト

--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -10,14 +10,11 @@ on:
 jobs:
   protect-branch:
     runs-on: ubuntu-latest
-
-    permissions: write-all
-
     steps:
-      - name: toronto-cli install & start
-        uses: MobilityTechnologiesActions/internal-tools/toronto-cli@v0
-        with:
-          mot-toronto-token: ${{ secrets.MOT_TORONTO_TOKEN }}
+      # - name: toronto-cli install & start
+      #   uses: MobilityTechnologiesActions/internal-tools/toronto-cli@v0
+      #   with:
+      #     mot-toronto-token: ${{ secrets.MOT_TORONTO_TOKEN }}
 
       - name: Create branch protection
         uses: actions/github-script@v6
