--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -10,25 +10,31 @@ jobs:
   protect-branch:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write # 必要な権限（リポジトリの内容への書き込み）
+    permissions: write-all
 
     steps:
-      - name: Set up GitHub CLI
-        uses: cli/gh-actions@v2 # GitHub CLIのセットアップ
-
-      - name: Set up GitHub repository
-        uses: actions/checkout@v3 # リポジトリのコードをチェックアウト
-
+      # - uses: actions/checkout@v4
       - name: Protect branch from deletion
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GITHUB_TOKENを使用
+          GITHUB_TOKEN: ${{ secrets.EDIT_BRANCH_RULES_SECRET }}
         run: |
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
-          echo "Protecting branch: $BRANCH_NAME from deletion"
+          OWNER=${{ github.repository_owner }}
+          REPO=${{ github.event.repository.name }}
+          echo "Protecting branch: $BRANCH_NAME, owner: $OWNER, repo: $REPO"
 
           gh api \
-            -X PUT \
+            --method PUT \
             -H "Accept: application/vnd.github+json" \
-            /repos/${{ github.repository }}/branches/${BRANCH_NAME}/protection \
-            -f allow_deletions=false
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${OWNER}/${REPO}/branches/${BRANCH_NAME}/protection \
+            -F "required_status_checks.strict=true" \
+            -f "required_status_checks.contexts[]=continuous-integration/travis-ci" \
+            -F "enforce_admins=true" \
+            -F "required_pull_request_reviews[dismiss_stale_reviews]=false" \
+            -F "required_pull_request_reviews[require_code_owner_reviews]=false" \
+            -F "required_pull_request_reviews[required_approving_review_count]=1" \
+            -f "restrictions.users=[]" \
+            -f "restrictions.teams=[]" \
+            -f "restrictions.apps=[]"
+            # -f "allow_deletions=false"
