削除できないようプロテクト

--- a/.github/workflows/protect_branches.yaml
+++ b/.github/workflows/protect_branches.yaml
@@ -64,5 +64,6 @@ jobs:
               required_pull_request_reviews: {
                 "required_approving_review_count": 1
               },
-              restrictions: null
+              restrictions: null,
+              allow_deletions: false
             })
